@@ -1,3 +1,8 @@
+2009-05-25  kitone  <kitone@gna.org>
+
+	* src/spellchecker.cc:
+	Add debug msg.
+
 2009-05-23  kitone  <kitone@gna.org>
 
 	* src/gui/textviewcell.cc:
